# pinecone-rust-client

./: Cargo.toml  README.md
src/: lib.rs
