[package]
name = "pinecone-client"
version = "0.1.2"
edition = "2021"
authors = ["Jamal S jsaied99@gmail.com"]
description = "The Pinecone Rust client"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/pinecone-client"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
